--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-CMakeFiles
-cmake-build-debug
-cmake_install.cmake
-CMakeCache.txt
-Makefile
+/CMakeFiles
+/cmake-build-debug
+/cmake_install.cmake
+/CMakeCache.txt
+/Makefile
 /.idea
-practice-code.cbp
+/practice-code.cbp
+/main_test
+/Makefile
+/all_test
