#1 Add some code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,10 @@ file(GLOB_RECURSE SOURCE_TEST
         test/*
     )
 
-add_executable(all_test ${SOURCE_TEST} ${SOURCE_C} ${SOURCE_CXX} misc/main-test.cpp)
+file(GLOB_RECURSE STRING_TEST
+        test/String.cpp
+        C++/String/String.cpp
+    )
+
+add_executable(all_test ${SOURCE_TEST} ${SOURCE_C} ${SOURCE_CXX} misc/main-test.cpp C++/String/String.hpp C++/String/String.cpp test/String.cpp)
+add_executable(string_test ${STRING_TEST} misc/main-test.cpp)
