--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 /CMakeFiles
-/cmake-build-debug
 /cmake_install.cmake
 /CMakeCache.txt
 /Makefile
 /.idea
 /practice-code.cbp
-/main_test
-/Makefile
+/string_test
 /all_test
